Fixed issue with swipe-to-delete animations overflowing, and ported functionality to fridge

--- a/current-app-wd/src/app/fridge/fridge.component.css
+++ b/current-app-wd/src/app/fridge/fridge.component.css
@@ -1,6 +1,7 @@
 .list-element{
 	background-color: #E5E5E5;
 	border: 3px solid white;
+    position: relative;
 }
 .add-item{
 	background-color: #0A8056;
